# EscapeTheFate

./: .gitignore  .gitmodules  .timetracker  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  breakpoints.lldb  build.gradle  cmake-format.yaml  memcheck.txt
.github/workflows/: build.yml
Assets/3dTest/: DefaultRest.anim  New Animation.anim  New Material 1.mat  New Material.mat  QuadParent.controller
Assets/Animation/Brushes/: Candle1.asset  Candle1BG.asset  MagicCircle1.asset  TorchTest.asset  TownPortals.asset
Assets/Animation/OrangeJoker/: HeadShakeIdle.anim  Joker_UI.anim  Merchant.controller  NPC Anim.controller
Assets/Animation/SaveCrystals/: SaveCrystal.controller  idle.anim
Assets/Animation/Todd/: toddTestWalk.anim  toddWalkin.controller
Assets/Animation/TripleTriad/: PreRewardScreen.anim
Assets/Battle Transition/Scripts/: Screenshot.cs  ShatterController.cs
Assets/MusicLoop/HowToUse/: ._HowToUse
Assets/Prefabs/: CardAlbumCanvas.prefab  EssentialsLoader.prefab  GameManager.prefab  JoystickHolder.prefab  OptionsCanvas.prefab  SceneManager.prefab  SoundManager.prefab
Assets/Prefabs/Classes/: Cory.asset  Kevin.asset  Tabby.asset  Todd.asset
Assets/Prefabs/Fingers/: BlinkingFinger.controller
Assets/Prefabs/Items/: BlankMateriaHolder.prefab  Elixir.asset  Ether.asset  Fast Eddie.asset  Giant Materia.asset  ItemHolder.prefab  MateriaHolder.prefab  Phoenix Down.asset  Potion.asset  Ramedy.asset  WeaponHolder.prefab
Assets/Prefabs/Player/: Kevin.prefab
Assets/Prefabs/Shop/: ShopEquipmentHolder.prefab
Assets/SFX/: ._Music
Assets/Scenes/: 3dcard.unity  BattleTemplate.unity  CreateMenu.unity  DebugRoom.unity  DebugRoom2.unity  LoadingScreen.unity  MainMenu.unity  TripleTriad.unity  temporary.unity
Assets/Scripts/: AreaEntrance.cs  AreaExit.cs  CharStatsHolder.cs  CharacterBench.cs  CharacterClass.cs  Dialog.cs  DialogActivator.cs  DialogManager.cs  EssentialsLoader.cs  GameManager.cs  GameMenus.cs  LoadingScreen.cs  MainCamera.cs  MainMenu.cs  NPCDefault.cs  PlayerController.cs  SoundManager.cs  UIFade.cs
Assets/Scripts/Battle/: BattleUi.cs  (+1 more)
ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
assets/aseprite/: atbBar.aseprite  atbBar.json  atbBar.lua  bBlackBird.aseprite  bBlackBird.json  bBlackBird.lua  battleTurnMarker.aseprite  battleTurnMarker.json  battleTurnMarker.lua  blackBird.aseprite  blackBird.json  blackBird.lua  padButtonsExport.aseprite  padButtonsExport.json  player1.aseprite  player1.json  player1Battler.aseprite  player1Battler.json  player1Battler.lua  player1BattlerNew.aseprite  player1BattlerNew.json  player1BattlerNew.lua  sword1.aseprite  sword1.json  sword1.lua
assets/battle/: battleDB.json  battleGroups.json
assets/config/: gameConfig.json  gameConfig.jsonc
assets/dialog/: debugTown.json  debugTown.jsonc  debugTownHome.json
assets/lua/: Engine.lua  GameObject.lua  Scheduler.lua  UI.lua  debugh.lua  gameConfig.lua  scenes.lua  test.lua  uitest.lua
assets/shaders/: 2dRectFragment.glsl  2dRectFragmentE.glsl  2dRectVertex.glsl  2dRectVertexE.glsl  2dSpriteFragment.glsl  2dSpriteFragmentE.glsl  2dSpriteVertex.glsl  2dSpriteVertexE.glsl  2dTextFragment.glsl  2dTextFragmentE.glsl
assets/tiled/: cloud.lua  cloud.tmj  cloud.tsj  cloud.tsx  debugSouth.lua  debugSouth.tmj  debugTown.lua  debugTown.tmj  debugTownHome.lua  debugTownHome.tmj  forest1.lua  forest1.tmj  goonRpg.tiled-project  goonRpg.tiled-session  house.lua  house.tsj  inside.lua  inside.tsj  outside.tsj  terrain.lua  terrain.tsj  untitled.lua  untitled.tmj
assets/ui/: battle.json  debugTown.json  debugTown.jsonc  debugTownU.json
cmake/: Info.plist  shell.html
src/: CMakeLists.txt  battleSystem.lua  dialogSystem  dialogSystem.lua  gameConfig.cpp  gameConfig.hpp  gameConfig.lua  gameState.cpp  gameState.hpp  gameState.lua  main.c  main.cpp  main.lua  pch.hpp  scenes.lua
src/battle/: battlerData.hpp  battlerUI.cpp  battlerUI.hpp  commandMenu.lua
src/bindings/: Controller.cpp  Controller.hpp  Player.cpp  Player.hpp  SpriteAnimator.cpp  SpriteAnimator.hpp  engine.cpp  engine.hpp
src/data/: battleData.lua  hero.lua
src/data/dialog/: debugTown.lua
src/debug/: DebugCamera.cpp  DebugCamera.hpp  DebugPlayers.cpp  DebugPlayers.hpp  DebugUI.cpp  DebugUI.hpp  DebugWindow.cpp  debugWindow.cpp  debugWindow.hpp
src/dialog/: dialog.lua
src/dialog/debugTown/: fire.lua  flowersign.lua  home.lua  sign1.lua  treesign.lua
src/dialog/debugTownHome/: bed.lua  pots.lua
src/gameobject/: GameObject.cpp  GameObject.hpp
src/gameobject/gameobjects/: BattleLocation.cpp  BattleLocation.hpp  Battler.cpp  Battler.hpp  EnemyBattler.cpp  EnemyBattler.hpp  LocalPlayer.cpp  LocalPlayer.hpp  MapExit.cpp  MapExit.hpp  Player.cpp  Player.hpp  PlayerBattler.cpp  PlayerBattler.hpp  Textbox.cpp  Textbox.hpp
src/gameobjects/: battle.lua  battler.lua  battlerLocation.lua  gameobjects.lua  player.lua  playerExit.lua  textInteraction.lua
src/interfaces/: IInteractable.hpp
src/scripts/: directions.lua  gameConfig.lua  gameState.lua  main.lua  scenes.lua  test.lua  uitest.lua
src/scripts/battle/: battleStart.lua
src/scripts/battle/data/: battleZones.lua  enemies.lua  enemyGroups.lua  players.lua
src/scripts/gameobjects/: battle.lua  battleLocation.lua  battleZone.lua  battler.lua  dialogBox.lua  exitBox.lua  gameobjectTypes.lua  player.lua  startBox.lua
src/scripts/ui/: battle.lua  town.lua  uitest.lua
src/systems/: GameObjectSystem.cpp  GameObjectSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  battleSystem.cpp  battleSystem.hpp  dialogSystem.cpp  dialogSystem.hpp
src/ui/: battleUI.lua  ui.cpp  ui.hpp  uiAnimation.cpp  uiAnimation.hpp  uiHLG.cpp  uiImage.cpp  uiImage.hpp  uiLayoutGroup.cpp  uiLayoutGroup.hpp  uiLine.cpp  uiLine.hpp  uiNineSlice.cpp  uiNineSlice.hpp  uiObject.cpp  uiObject.hpp  uiProgressBar.cpp  uiProgressBar.hpp  uiText.cpp  uiText.hpp  uiVLG.cpp  uiVLG.hpp  uitest.lua
terraform/: .terraform.lock.hcl  cloudfront.tf  r53.tf  s3.tf  variables.tf
tools/: jsontolua.py
(+514 files in other folders)
